Set up deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "musiccartusingprops",
+  "homepage": "//eeshunarayan15.github.io/music-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "serve": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "musiccartusingprops": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
